# token-vault

./: .gitignore  Cargo.toml  README.md  SPEC.md  goal.txt  index.html  package-lock.json  package.json  tailwind.config.js  test_functional.sh  todo_manager.py  utils.py  vite.config.ts  请提供以下信息：
.claude/: settings.json
src/: App.css  App.tsx  App.tsx.bak  app.js  errors.ts  index.css  index.html  main.rs.bak  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.backups/src-tauri_20260418_114549/files/root/token-vault/src-tauri/src/: lib.rs
src-tauri/.backups/src-tauri_20260418_114905/files/root/token-vault/src-tauri/src/: lib.rs  wallet.rs
src-tauri/.backups/src-tauri_20260418_120843/files/root/token-vault/src-tauri/src/: lib.rs
src-tauri/.backups/src-tauri_20260418_121046/files/root/token-vault/src-tauri/: Cargo.toml
src-tauri/.backups/src-tauri_20260418_121227/files/root/token-vault/src-tauri/src/: lib.rs
src-tauri/.backups/src-tauri_20260418_121227/files/root/token-vault/src-tauri/src-tauri/src/: lib.rs
src-tauri/.backups/src-tauri_20260418_124536/files/root/token-vault/src-tauri/src/: lib.rs
src-tauri/.backups/src-tauri_20260418_124752/files/root/token-vault/src-tauri/src/: lib.rs
src-tauri/examples/: explore_alloy.rs
src-tauri/src/: address_book.rs  chain_adapter.rs  crypto.rs  erc20.rs  errors.rs  gas.rs  hardware_wallet.rs  keystore.rs  lib.rs  lib.rs.bak  lib_status.rs  logging.rs  main.rs  nft.rs  rpc.rs  rpc.rs.bak  saved_address.rs  security.rs  solana.rs  storage.rs  transaction.rs  version.rs  wallet.rs  wallet.rs.bak
src-tauri/src-tauri/: tauri.conf.json
src-tauri/src-tauri/src/: lib.rs
src-tauri/tests/: crypto_tests.rs  rpc_tests.rs  transaction_tests.rs  wallet_tests.rs
src/components/: ExportModal.tsx  (+9 more)
(+58 files in other folders)
