[package]
name = "token-vault"
version = "0.1.0"
edition = "2021"

[lib]
name = "token_vault_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
base64 = "0.22"
hex = "0.4"
rand = "0.8"
tokio = { version = "1", features = ["full"] }
thiserror = "1"
argon2 = "0.5"
reqwest = { version = "0.12", features = ["json"] }
ethers = "2"
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
lazy_static = "1.4"
k256 = "0.13"
rlp = "0.5"
primitive-types = "0.12"
sha3 = "0.10"
rusqlite = { version = "0.32", features = ["bundled"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
