[package]
name = "token-vault"
version = "0.1.0"
edition = "2021"

[lib]
name = "token_vault_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = "2"

[dependencies]
tauri = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
parking_lot = "0.12"
bip39 = "2"
argon2 = "0.5"
aes-gcm = "0.10"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
tiny-keccak = { version = "2", features = ["keccak"] }
thiserror = "1"
ethers = { version = "2", default-features = false, features = ["ws", "ipc"] }
once_cell = "1.19"
chrono = { version = "0.4", features = ["serde"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-shell = "2"
